# pkg/bff/api/v1/client.go
@@ -233,6 +233,22 @@ func (s *APIv1) ListOrganizations(ctx context.Context) (out []*OrganizationReply
 	return out, nil
 }
 
+// Patch an organization.
+func (s *APIv1) PatchOrganization(ctx context.Context, id string, in *OrganizationParams) (out *OrganizationReply, err error) {
+	// Make the HTTP request
+	var req *http.Request
+	if req, err = s.NewRequest(ctx, http.MethodPatch, "/v1/organizations/"+id, in, nil); err != nil {
+		return nil, err
+	}
+
+	// Execute the request and get a response
+	out = &OrganizationReply{}
+	if _, err = s.Do(req, out, true); err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // Add a collaborator to an organization.
 func (s *APIv1) AddCollaborator(ctx context.Context, request *models.Collaborator) (collaborator *models.Collaborator, err error) {
 	// Make the HTTP request
